--- a/.gitignore
+++ b/.gitignore
@@ -19,15 +19,12 @@
 # misc
 .DS_Store
 *.pem
+good_to_know.txt
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# local env files
-.env*.local
-.env
 
 # vercel
 .vercel
@@ -35,3 +32,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Local env files (DO NOT commit secrets)
+*.env
+*.env.*
+!*.env.example
