--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "db:check": "drizzle-kit check"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.38",
+    "@ai-sdk/react": "^2.0.56",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "ai": "^5.0.56",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.31.2",
-    "drizzle-zod": "^0.5.1",
+    "drizzle-orm": "^0.44.5",
+    "drizzle-zod": "^0.8.3",
     "lucide-react": "^0.396.0",
     "nanoid": "^5.0.7",
     "next": "14.2.4",
@@ -33,9 +36,10 @@
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.5.0",
+    "styled-jsx": "^5.1.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
